5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4330/executions/1630_2919.log
== TEST (2019-04-02 16:39:21) 
-- CODE:
a1=float(input(round(1.6)))
a2=float(input(""))
a3=float(input(""))
a4=float(input())
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:39:42) 
-- CODE:
a1=float(input(round(1.6)))
a2=float(input(round(1.5)))
a3=float(input(""))
a4=float(input())
-- OUTPUT:
22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:39:43) 
-- CODE:
a1=float(input(round(1.6)))
a2=float(input(round(1.5)))
a3=float(input(""))
a4=float(input())
-- OUTPUT:
22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:40:01) 
-- CODE:
a1=float(input(round(1.6)))
a2=float(input(round(a,3)))
a3=float(input(""))
a4=float(input())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a2=float(input(round(a,3)))
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:41:28) 
-- CODE:
a1=float(input("altura"))
a2=float(input("altura"))
a3=float(input("altura"))
a4=float(input("altura"))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a2=float(input(round(a,3)))
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 02:19:00) 
-- CODE:
a1=float(input("altura"))
a2=float(input("altura"))
a3=float(input("altura"))
a4=float(input("altura"))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a2=float(input(round(a,3)))
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 02:19:01) 
-- CODE:
a1=float(input("altura"))
a2=float(input("altura"))
a3=float(input("altura"))
a4=float(input("altura"))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a2=float(input(round(a,3)))
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
